[gd_scene load_steps=4 format=3 uid="uid://dcg7fsn0f1qcp"]

[ext_resource type="Script" path="res://source/scene/UI/debug_level.gd" id="1_81dbu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vw45r"]
bg_color = Color(0.6, 0.6, 0.6, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgkpl"]
bg_color = Color(0.6, 0.6, 0.6, 0)
anti_aliasing = false

[node name="DebugLevel" type="Control"]
custom_minimum_size = Vector2(124, 40)
layout_mode = 3
anchors_preset = 0
offset_right = 124.0
offset_bottom = 40.0
script = ExtResource("1_81dbu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LevelUpButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_vw45r")
text = "提升等级"

[node name="LevelDownButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxFlat_bgkpl")
text = "降低等级"

[node name="CurrentLevelLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "当前等级:"
